取消配置文件，项目demo完成

--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,19 @@
 			<version>1.2.47</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>javax.mail-api</artifactId>
+			<version>1.5.6</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+
+
 
 	</dependencies>
 
@@ -96,10 +109,26 @@
 	</repositories>
 
 	<build>
+		<!-- 打成jar包的名称 -->
+		<finalName>IP-Tools</finalName>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<excludes>
+					<exclude>**/*.properties</exclude>
+					<exclude>**/*.yml</exclude>
+					<exclude>**/*.xml</exclude>
+				</excludes>
+			</resource>
+		</resources>
+
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>org.example.demo.SpringbootDemoApplication</mainClass>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
